--- a/style.css
+++ b/style.css
@@ -1,29 +1,89 @@
 @charset "uft-8";
 a{
     text-decoration: none;
-    color: white;
+    color: black;
 }
-.NavImage img{
-    width: 70px;
+*, *::after, *::before{
+  box-sizing: border-box;
 }
-.NavContainer{
-    background-color: black;
+header {
+  padding: 20px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: black;
+  background-color: lightgray;
 }
-.MainNav{
-    min-width: 768px;
-    max-width: 1100px;
-    height: 70px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    margin-left: auto;
-    margin-right: auto;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px;
+.nav-image img{
+  width: 70px;
 }
-.NavListItem{
-    font-family: "Prompt", sans-serif;
-    font-size: 16px;
-    font-weight: 500;
+.nav-bar {
+  flex-grow: 1;
+  display: flex;
+  justify-content: flex-end;
+  position: relative;
+}
+.menu-toggle {
+  display: block;
+  background: none;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+  z-index: 1100;
+  position: relative;
+  color: black;
+}
+.nav-container {
+  display: none;
+  flex-direction: column;
+  text-align: center;
+  list-style: none;
+}
+.nav-container.active {
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: lightgray;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+.nav-list-item {
+  margin: 20px 0;
+}
+.nav-list-item a {
+  color: white;
+  list-style: none;
+  text-decoration: none;
+  font-family: prompt ;
+  font-size: 24px;
+  letter-spacing: 0.1em;
+  padding: 10px;
+  opacity: 0.7;
+  border-bottom: 2px solid transparent;
+  transition: opacity 0.3s ease, border-bottom 0.3s ease;
+}
+.nav-list-item a:hover {
+  opacity: 0.9;
+  border-bottom: 2px solid white;
+}
+@media screen and (min-width: 800px) {
+  .nav-container {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+      width: auto;
+      height: auto;
+      background-color: transparent;
+  }
+  .nav-list-item{
+    margin: 0 40px;
+  }
+  .menu-toggle {
+      display: none;
+  }
 }
