--- a/styles/style.css
+++ b/styles/style.css
@@ -27,9 +27,14 @@ header {
     align-items: center;
 }
 
-.logo h1 {
+.logo a h1 {
     color: white;
     font-size: 1.5rem;
+}
+
+.logo a{
+    text-decoration: none;
+    color: white;
 }
 
 .logo img {
