--- a/styles/style.css
+++ b/styles/style.css
@@ -683,4 +683,14 @@ footer {
   margin-bottom: 0.5rem;
 }
 
+.map {
+  margin-top: 1rem;
+  display: flex;
+  padding: 1rem 1rem 2rem 1rem;
+  background-color: #f5f5f5;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
 /*-----------------------------------------------------------*/
